z-index on fixedText in header

--- a/wp-content/themes/vladastheme/src/styles/scss/_components/_headers/_header-home.scss
+++ b/wp-content/themes/vladastheme/src/styles/scss/_components/_headers/_header-home.scss
@@ -17,7 +17,7 @@
   }
 
   &__fixedText {
-    z-index: 2;
+    z-index: 1;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
